# claude-test

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  README.md  Vertex_Grid.md  Vertex_Grid_Collision.md  build.bat  main.c
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: add_force.comp  add_force_density.comp  add_force_u.comp  add_force_v.comp  advect.comp  advect_density.comp  advect_u.comp  advect_v.comp  divergence.comp  divergence_stats.comp  gradient_subtract.comp  gradient_subtract_u.comp  gradient_subtract_v.comp  pressure.comp  quad.vert  render.frag  text.frag  text.vert
